Closed Bug 1187351 Opened 9 years ago Closed 9 years ago

[e10s][TSF][TS_E_NOLAYOUT] TSFTextStore::GetTextExt() shouldn't return TS_E_NOLAYOUT after notifying TSF of layout change

Categories

(Core :: Widget: Win32, defect)

x86
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: inputmethod)

Attachments

(1 file)

At bug 1176950, we put off to clear mLockedContent until all sending events are handled. Then, TSFTextStore becomes to clear it at receiving NOTIFY_IME_OF_COMPOSITION_UPDATE. However, NOTIFY_IME_OF_POSITION_CHANGE which causes notifying TSF of layout change may be received before that. In this case, mLockedContent keeps storing modified range and GetTextExt() may return TS_E_NOLAYOUT even though we have notified TSF of layout becoming available.

So, before notifying TSF of layout change, mLockedContent should forget the modified range and making GetTextExt() never return TS_E_NOLAYOUT.
Attachment #8638577 - Flags: review?(VYV03354)
Attachment #8638577 - Flags: review?(VYV03354) → review+
url:        https://hg.mozilla.org/integration/mozilla-inbound/rev/7ef4f6f01e9e7feca71a0a43a7c24019a1f7670e
changeset:  7ef4f6f01e9e7feca71a0a43a7c24019a1f7670e
user:       Masayuki Nakano <masayuki@d-toybox.com>
date:       Sun Jul 26 12:29:47 2015 +0900
description:
Bug 1187351 TSFTextStore should forget modified range at notifying TSF of layout change since GetTextExt() shouldn't return TS_E_NOLAYOUT after that r=emk
https://hg.mozilla.org/mozilla-central/rev/7ef4f6f01e9e
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Summary: [e10s][TSF] TSFTextStore::GetTextExt() shouldn't return TS_E_NOLAYOUT after notifying TSF of layout change → [e10s][TSF][TS_E_NOLAYOUT] TSFTextStore::GetTextExt() shouldn't return TS_E_NOLAYOUT after notifying TSF of layout change
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: